# battleship

./: CMakeLists.txt  Readme.MD
include/: defensive_actor.h  error.h  offensive_actor.h
src/: defensive_actor.cpp  error.cpp  main.cpp  offensive_actor.cpp
